# dtriage

./: Cargo.toml  README.md
assets/: sample-config.toml
benches/: performance.rs
src/: daemon.rs  main.rs
src/cli/: clean.rs  config.rs  mod.rs  review.rs  status.rs
src/config/: mod.rs  paths.rs  rules.rs
src/logging/: mod.rs
src/security/: keyring.rs  mod.rs  validation.rs
src/storage/: database.rs  mod.rs  models.rs
src/triage/: categorizer.rs  hasher.rs  llm.rs  mod.rs  worker.rs
tests/common/: mod.rs
tests/integration/: watcher_test.rs
